--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <ul>
                 <li><strong>GPG Key ID:</strong> 9B542AA270F867E5 (for secure communication)</li>
                 <li><strong>Contact:</strong> <a href="mailto:daniel@danielkill.online">daniel@danielkill.online</a></li>
+                <li><a href="https://daniel-kill.github.io/Daniel-Kill_Resume.pdf" target="_blank">Resume</a></li>
                 <li><a href="https://linktr.ee/daniel_kill" target="_blank">Linktree</a></li>
                 <li><a href="https://github.com/Daniel-Kill" target="_blank">GitHub</a></li>
                 <li><a href="https://keys.openpgp.org/vks/v1/by-fingerprint/E453F9AEC380D33E4BA7FAC69B542AA270F867E5" target="_blank">OpenPGP Key</a></li>
