--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <li><a href="https://daniel-kill.github.io/Daniel-Kill_Resume.pdf" target="_blank">Resume</a></li>
                 <li><a href="https://linktr.ee/daniel_kill" target="_blank">Linktree</a></li>
                 <li><a href="https://github.com/Daniel-Kill" target="_blank">GitHub</a></li>
-                <li><a href="https://keys.openpgp.org/vks/v1/by-fingerprint/E453F9AEC380D33E4BA7FAC69B542AA270F867E5" target="_blank">OpenPGP Key</a></li>
+                <li><a href="https://daniel-kill.github.io/gpg_PublicKey_daniel@danielkill.online.asc" target="_blank">OpenPGP Key</a></li>
             </ul>
         </section>
     </main>
