--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Daniel Kill - IT Professional</title>
+        <link rel="stylesheet" href="style.css">
+        <style>
+            body {
+                background-color: #222;
+                color: #fff;
+            }
+        </style>
+    </head>
     <title>Daniel Kill - IT Professional</title>
     <link rel="stylesheet" href="style.css"> </head>
 <body>
