--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
                 background-color: #222;
                 color: #fff;
             }
+            a:link {
+               color: greenyellow;
+               background-color: transparent;
+               text-decoration: none;
+            }
+            a:visited {
+               color: deepskyblue;
+               background-color: transparent;
+               text-decoration: none;
+            }
+            a:active {
+               color: yellow;
+               background-color: transparent;
+            }
         </style>
     </head>
     <title>Daniel Kill - IT Professional</title>
