--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
                color: greenyellow;
                background-color: transparent;
                text-decoration: none;
+               font-weight: bold;
+               font-size: 18px;
+               padding: 5px;
+               border: 1px solid greenyellow;
+               border-radius: 5px;
             }
             a:visited {
                color: deepskyblue;
@@ -78,9 +83,10 @@
                 <li><strong>GPG Key ID:</strong> 9B542AA270F867E5 (for secure communication)</li>
                 <li><strong>Contact:</strong> <a href="mailto:daniel@danielkill.online">daniel@danielkill.online</a></li>
                 <li><a href="https://daniel-kill.github.io/Daniel-Kill_Resume.pdf" target="_blank">Resume</a></li>
-                <li><a href="https://linktr.ee/daniel_kill" target="_blank">Linktree</a></li>
                 <li><a href="https://github.com/Daniel-Kill" target="_blank">GitHub</a></li>
-                <li><a href="https://daniel-kill.github.io/gpg_PublicKey_daniel@danielkill.online.asc" target="_blank">OpenPGP Key</a></li>
+                <li><a href="https://daniel-kill.github.io" target="_blank">OpenPGP Key</a></li>
+                <li><a href="https://daniel-kill.github.io/gpg_PublicKey_daniel@danielkill.online.asc" target="_blank">GitHub Pages</a></li>
+                <li><a href="https://linktr.ee/daniel_kill" target="_blank">Linktree</a></li>
             </ul>
         </section>
     </main>
