--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                 <li><strong>Contact:</strong> <a href="mailto:daniel@danielkill.online">daniel@danielkill.online</a></li>
                 <li><a href="https://daniel-kill.github.io/Daniel-Kill_Resume.pdf" target="_blank">Resume</a></li>
                 <li><a href="https://github.com/Daniel-Kill" target="_blank">GitHub</a></li>
-                <li><a href="https://daniel-kill.github.io" target="_blank">OpenPGP Key</a></li>
-                <li><a href="https://daniel-kill.github.io/gpg_PublicKey_daniel@danielkill.online.asc" target="_blank">GitHub Pages</a></li>
+                <li><a href="https://daniel-kill.github.io" target="_blank">GitHub Pages</a></li>
+                <li><a href="https://daniel-kill.github.io/gpg_PublicKey_daniel@danielkill.online.asc" target="_blank">OpenPGP Key</a></li>
                 <li><a href="https://linktr.ee/daniel_kill" target="_blank">Linktree</a></li>
             </ul>
         </section>
